--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "lint-staged": {
     "*.{js,ts,json}": [
-      "eslint --fix"
+      "eslint --quiet --fix"
     ],
     "*.{js,ts,json,md}": [
       "prettier --write"
