--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "start": "node ./api/index.js",
-    "start:dev": "nodemon ./api/index.js",
+    "start:dev": "nodemon ./src/index.ts",
     "build": "yarn lint && yarn compile && yarn test",
     "clean": "rm -rf api && rm -rf node_modules/.cache",
     "compile": "tsc -b",
@@ -30,9 +30,11 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.11",
     "axios": "^0.27.2",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "@lerna-express-starter/logger": "0.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   }
