--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
     "build": "yarn lint && yarn compile && yarn test",
     "clean": "rm -rf api && rm -rf node_modules/.cache",
     "compile": "tsc -b",
+    "postcompile": "cp -R ./src/openapi.yaml ./api",
     "lint": "eslint . --ignore-path ../../.eslintignore --ext .ts src/**",
     "test": "echo TODO TESTS"
   },
@@ -36,6 +37,8 @@
   "dependencies": {
     "@lerna-express-starter/logger": "0.0.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "swagger-ui-express": "^4.5.0",
+    "yamljs": "^0.3.0"
   }
 }
