--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@commitlint/cli": "^16.0.0",
+    "@commitlint/config-conventional": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.34.0",
     "cross-env": "^7.0.3",
@@ -46,5 +48,20 @@
     "*.{js,ts,json,md}": [
       "prettier --write"
     ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "subject-case": [
+        2,
+        "never",
+        [
+          "start-case",
+          "pascal-case"
+        ]
+      ]
+    }
   }
 }
