--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstarp --use-workspaces",
-    "build": "lerna run build --parallel",
+    "build": "lerna run build --parallel --stream",
     "start:dev": "lerna run start:dev --stream -- -r .env",
     "clean": "rm -rf ./packages/**/tsconfig.tsbuildinfo && rm -rf node_modules/.cache && lerna run clean",
     "lint": "lerna run lint --parallel",
