--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,14 +25,22 @@
     "compile": "tsc -b",
     "postcompile": "cp -R ./src/openapi.yaml ./api",
     "lint": "eslint . --ignore-path ../../.eslintignore --ext .ts src/**",
-    "test": "echo TODO TESTS"
+    "test": "nyc mocha --exit \"test/**/*.spec.ts\" -r ts-node/register/transpile-only -r source-map-support/register -R min"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.3",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^18.7.11",
+    "@types/sinon": "^10.0.13",
     "axios": "^0.27.2",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1"
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
   },
   "dependencies": {
     "@lerna-express-starter/logger": "0.0.0",
