--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstarp --use-workspaces",
-    "build": "lerna run build --parallel --stream",
+    "build": "lerna run build --include-dependencies --stream",
+    "package": "lerna run package --parallel",
     "start:dev": "lerna run start:dev --stream -- -r .env",
-    "clean": "rm -rf ./packages/**/tsconfig.tsbuildinfo && rm -rf node_modules/.cache && lerna run clean",
+    "clean": "rm -rf ./packages/**/tsconfig.tsbuildinfo .nyc_output node_modules/.cache && lerna run clean --parallel",
+    "compile": "lerna run compile --parallel",
     "lint": "lerna run lint --parallel",
     "test": "lerna run test --parallel"
   },
