--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "esModuleInterop": true,
     "target": "es6",
     "sourceMap": true,
-    "lib": ["es6"]
+    "lib": ["es6"],
+    "moduleResolution": "node"
   },
+  "include": ["/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
