--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -9,10 +9,10 @@
   "private": true,
   "homepage": "",
   "license": "ISC",
-  "main": "lib/auth.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
-    "test": "__tests__"
+    "test": "test"
   },
   "files": [
     "lib"
@@ -20,9 +20,9 @@
   "scripts": {
     "build": "yarn lint && yarn compile && yarn test",
     "compile": "tsc -b",
-    "clean": "rm -rf lib && rm -rf node_modules/.cache",
+    "clean": "rm -rf lib node_modules/.cache coverage .nyc_output",
     "lint": "eslint . --ignore-path ../../.eslintignore --ext .ts src/**",
-    "test": "nyc mocha --exit \"test/**/*.spec.ts\" -r ts-node/register/transpile-only -r source-map-support/register -R min"
+    "test": "nyc mocha --exit \"test/**/*.spec.ts\" -r ts-node/register/transpile-only"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
@@ -48,8 +48,7 @@
       "src"
     ],
     "exclude": [
-      "src/**/types.ts",
-      "src/index.ts"
+      "src/**/types.ts"
     ],
     "extension": [
       ".ts"
