--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -12,7 +12,7 @@
   "main": "lib/index.js",
   "directories": {
     "lib": "lib",
-    "test": "__tests__"
+    "test": "test"
   },
   "files": [
     "lib"
@@ -22,10 +22,10 @@
     "url": "git+https://github.com/jamesyjh/lerna-exrpess-starter.git"
   },
   "scripts": {
-    "build": "yarn lint && yarn compile && yarn test",
-    "lint": "eslint . --ignore-path ../../.eslintignore --ext .ts src/**",
+    "build": "yarn lint && yarn compile",
     "compile": "tsc -b",
-    "test": "echo TODO TESTS"
+    "clean": "rm -rf lib node_modules/.cache coverage .nyc_output",
+    "lint": "eslint . --ignore-path ../../.eslintignore --ext .ts src/**"
   },
   "bugs": {
     "url": "https://github.com/jamesyjh/lerna-exrpess-starter/issues"
@@ -67,9 +67,9 @@
       "lcov",
       "text-summary"
     ],
-    "lines": 100,
-    "branches": 100,
-    "functions": 100,
-    "statements": 100
+    "lines": 0,
+    "branches": 0,
+    "functions": 0,
+    "statements": 0
   }
 }
